log
Wed, Apr 16, 2025  9:42:38 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
eeef3b7
Wed, Apr 16, 2025  9:58:21 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
00286e8
Thu, Apr 17, 2025  8:41:32 PM: 
 tests:  1|5
total_score: 10/70
5c5c5fc
Thu, Apr 17, 2025 11:20:48 PM: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
df511e4
Fri, Apr 18, 2025  8:46:35 PM: 
 hashmap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  0|0
c84b774
Fri, Apr 18, 2025  8:47:40 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f53c7e1
Fri, Apr 18, 2025  8:56:37 PM: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair ** old_buckets = map; // guardamos el antiguo mapa
                           ^~~
hashmap.c:68:25: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long old_capacity = map->buckets; // guardamos la capacidad del antiguo mapa
                         ^~~
cc1.exe: all warnings being treated as errors
0387682
Fri, Apr 18, 2025  9:03:20 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:27: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair ** old_buckets = map; // guardamos el antiguo mapa
                           ^~~
hashmap.c:68:25: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long old_capacity = map->buckets; // guardamos la capacidad del antiguo mapa
                         ^~~
cc1.exe: all warnings being treated as errors
8d5a341
Fri, Apr 18, 2025  9:08:00 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
190d92e
Fri, Apr 18, 2025  9:14:38 PM: 
 tests:  0|0
6a0573a
Fri, Apr 18, 2025  9:17:56 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
a5ec947
Fri, Apr 18, 2025  9:23:41 PM: 
 hashmap.c | 22 ----------------------
 1 file changed, 22 deletions(-)
 tests:  5|4
total_score: 30/70
5f5030f
Fri, Apr 18, 2025  9:25:37 PM: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
cb4271e
Fri, Apr 18, 2025  9:28:49 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
7781d69
Fri, Apr 18, 2025  9:29:07 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a528c4f
Fri, Apr 18, 2025  9:29:52 PM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
58f55b7
Fri, Apr 18, 2025  9:31:40 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
98a201c
Fri, Apr 18, 2025  9:31:59 PM: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|3
total_score: 40/70
21da5cf
Fri, Apr 18, 2025  9:33:09 PM: 
 hashmap.c | 43 ++++++++++++++++++++-----------------------
 1 file changed, 20 insertions(+), 23 deletions(-)
 tests:  6|3
total_score: 40/70
ed73dd5
Fri, Apr 18, 2025  9:33:47 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
b6d34ad
Fri, Apr 18, 2025  9:35:23 PM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
2653be6
Fri, Apr 18, 2025  9:35:52 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|3
total_score: 40/70
dfcd904
Fri, Apr 18, 2025  9:37:30 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
e348458
Fri, Apr 18, 2025 10:03:44 PM: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  6|3
total_score: 40/70
c2403fd
Fri, Apr 18, 2025 10:13:24 PM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:129:19: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return map->buckets;
                ~~~^~~~~~~~~
hashmap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
952ce4a
Fri, Apr 18, 2025 10:19:15 PM: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
dae4a2e
Fri, Apr 18, 2025 10:19:58 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
245c331
Fri, Apr 18, 2025 10:21:04 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
5372325
Fri, Apr 18, 2025 10:21:31 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
4e08668
Fri, Apr 18, 2025 10:23:21 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
6a69d8f
Fri, Apr 18, 2025 10:32:40 PM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
fb6ed00
Fri, Apr 18, 2025 10:33:16 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|1
total_score: 60/70
bde04c4
Fri, Apr 18, 2025 10:42:12 PM: 
 hashmap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  13|1
total_score: 60/70
8415f69
Fri, Apr 18, 2025 10:45:31 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  13|1
total_score: 60/70
3417f50
Fri, Apr 18, 2025 10:49:35 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:149:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = 0;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
c4b8380
